<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/_10sdp"
    android:paddingTop="@dimen/_10sdp"
    android:layout_gravity="center_vertical"
    android:background="@android:color/transparent">

        <LinearLayout
            android:id="@+id/layout_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/canvas_theme"
            android:padding="@dimen/_10sdp"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center"
                android:text="@string/otp"
                android:textColor="@color/light_text_color"
                android:textSize="@dimen/_10sdp"
                android:textAllCaps="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/sent_verification_phone"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:textColor="@color/light_text_color"
                android:textSize="@dimen/_8sdp"/>

            <com.mukesh.OtpView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="number"
                android:itemBackground="@drawable/bg_edit"
                android:padding="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/light_text_color"
                app:cursorColor="@color/light_text_color"
                app:itemCount="4"
                app:itemHeight="@dimen/_30sdp"
                app:itemRadius="@dimen/_3sdp"
                app:itemWidth="@dimen/_30sdp"
                app:viewType="rectangle" />


            <LinearLayout
                android:id="@+id/lay_otp_expire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:visibility="visible"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/expire_otp"
                    android:textColor="@color/light_text_color"
                    android:textSize="@dimen/_10sdp"/>

                <TextView
                    android:id="@+id/tv_otp_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:text="@string/timer_txt"
                    android:textColor="@color/light_text_color"
                    android:textSize="@dimen/_10sdp"/>

            </LinearLayout>
            <Button
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/canvas_signin_btn_bg"
                android:layout_gravity="center"
                android:text="@string/click_continuee"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/btn_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_gravity="center"
                android:visibility="gone"
                android:text="@string/resend"
                android:textColor="@color/light_text_color"
                android:textAllCaps="false"
                android:textSize="@dimen/_10sdp"/>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_enter_mobile_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="@drawable/canvas_theme"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/enter_mobile"
            android:textColor="@color/white_smoke"
            android:textSize="@dimen/_10sdp"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:text="@string/sent_verificationn"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/light_text_color"
            android:textSize="@dimen/_8sdp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edit">

            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:ccp_textColor="@color/light_text_color"
                android:padding="@dimen/_5sdp"
                app:ccp_defaultCode="91"
                app:ccp_clickable="false"
                android:layout_marginStart="@dimen/_3sdp"
                app:ccp_backgroundColor="@color/transparent"
                app:ccp_textSize="@dimen/_10sdp"
                app:ccp_arrowSize="@dimen/_10sdp"
                app:ccp_textFont="myfonts.ttf"
                app:ccp_showFlag="false"
                app:ccp_defaultNameCode="IN"/>

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/ccp"
                android:background="@null"
                android:cursorVisible="true"
                android:focusable="true"
                android:digits="0123456789"
                android:hint="@string/phone_no"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingTop="@dimen/_9sdp"
                android:paddingBottom="@dimen/_9sdp"
                android:textColor="@color/light_text_color"
                android:textColorHint="@color/light_text_color"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>


        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/canvas_signin_btn_bg"
            android:layout_gravity="center"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:gravity="center"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/_5sdp"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_close_black_24dp"
        app:tint="@color/white"
        android:contentDescription="@string/app_name" />
</RelativeLayout>