<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/root_vieww"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:id="@+id/slideView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/textView"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_minimize_black_24dp"
            android:gravity="center_horizontal"
            android:contentDescription="@string/app_name" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@+id/textView"
            android:orientation="vertical"
            tools:ignore="UselessParent">


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/line_gradient"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_photo"
                    android:textColor="@color/blue_intro_color"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_10sdp"
                    app:fontFamily="@font/opensans_regular"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_dotted"
                    android:paddingTop="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_camera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/camera"
                        android:textColor="@color/blue_intro_color"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:padding="@dimen/_10sdp"
                        android:textSize="@dimen/_10sdp"
                        app:fontFamily="@font/opensans_semibold"
                        />
                    <TextView
                        android:id="@+id/tvGallery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gallery"
                        android:padding="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:textColor="@color/blue_intro_color"
                        android:textSize="@dimen/_10sdp"
                        app:fontFamily="@font/opensans_semibold"
                        />
                    <TextView
                        android:id="@+id/tvCancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:padding="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:textColor="@color/blue_intro_color"
                        android:textSize="@dimen/_10sdp"
                        app:fontFamily="@font/opensans_semibold"
                        />

                </LinearLayout>


            </LinearLayout>




        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
